--- a/Lab6/testbench/uart/makefile
+++ b/Lab6/testbench/uart/makefile
@@ -8,18 +8,15 @@ Target:
 		-march=rv32i_zicsr -mabi=ilp32 -D__vexriscv__ -DUSER_PROJ_IRQ0_EN \
 		-Wl,-Bstatic,-T,../../firmware/sections.lds,--strip-discarded \
 		-ffreestanding -nostartfiles -o uart.elf ../../firmware/crt0_vex.S ../../firmware/isr.c uart.c counter_la_uart.c
-	# -nostartfiles	
 	@ riscv-none-elf-objcopy -O verilog uart.elf uart.hex
-	@ riscv-none-elf-objdump -D uart.elf > uart.out
 
-	# to fix flash base address
 	@ sed -ie 's/@10/@00/g' uart.hex
 
 	@ iverilog -Ttyp -DFUNCTIONAL -DSIM -DUNIT_DELAY=#1 \
 		-f./include.rtl.list -o uart.vvp uart_tb.v 
 
 	@ vvp -l simulation.log uart.vvp
-	@ rm -f uart.vvp uart.elf uart.hexe
+	@ rm -f *.s *.o *.i *.out *.map *.elf *.hexe *.vvp
 
 .PHONY: clean wv
 clean:
